--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <select name="players" id="playersFilter">
                     <option value="all">All Players</option>
                     <option value="greaterThan15">Jersey Greater Than 15</option>
+                    <option value="defender">Defenders Only</option>
+
                 </select>
             </section>
             <section class="center" id="fruitButtonsContainer">
